openwebui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-webui
  name: svc-open-webui
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: open-webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: open-webui
  name: open-webui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:  
      volumes:
      - name: webui-data
        persistentVolumeClaim:
          claimName: pvc-nfs-openwebui
      containers:
      - image: ghcr.io/open-webui/open-webui
        name: open-webui
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: webui-data
          mountPath: /app/backend/data
